# PLP-2023

./: .gitignore  Dockerfile  Locais.csv  Local.pl  PLP2023.cabal  README.md
Agenda/: CampoAgenda.csv  QuadraAgenda.csv  TenisAgenda.csv
Arquivos/: UsuariosInstituicao.csv
Database/: Database.hs
Haskell/: PLP2023.cabal  RecursosLocais.csv
Haskell/Arquivos/: Eventos.csv  Usuarios.csv
Haskell/Local/: Agenda.hs  Local.hs  Util.hs
Haskell/Services/: CriarLocalService.hs  DesinscreverEventoService.hs  EstatisticaService.hs
Local/: Agenda.hs  Agenda2.hs  Locais.csv  Local.hs  RecursosLocais.csv
Login/: CadastraLogin.hs  CadastraLoginInstituicao.hs  LoginAdm.hs
Menu/: MenuPrincipal.hs
Models/: Evento.hs  Horario.hs  Local.hs  Usuario.hs  UsuarioInstituicao.hs
Prolog/Data/: agendamentos.csv  data.pl  eventos.csv  local.csv  usuarios.csv
Prolog/Menu/: Choices.pl  Menu.pl  Screens.pl  States.pl  Transitions.pl
Prolog/Menu/Agendamento/: AgendamentoAdm.pl  AgendamentoInstituicao.pl  AgendamentoUsuario.pl
Prolog/Models/Agendamento/: Agendamento.pl  GetSetAgendamento.pl
Prolog/Models/Local/: Local.pl  (+1 more)
Prolog/Repository/: agendamentoRepository.pl  eventoRepository.pl  localRepository.pl  usuarioRepository.pl
Prolog/Utils/: conversors.pl  generators.pl  gum.pl  parsers.pl
Services/: AlocarHorarioService.hs  CriarEventoService.hs  DesalocarHorarioService.hs  DesinscreverEventoService.hs  EstatisticaService.hs  InscreverEventoService.hs
Text/: CSV.hs
Utils/: CSVParser.hs  GraphicView.hs  Gum.hs  Parser.hs
app/: Main.hs  Menu.hs
app/Utils/: Gum.hs
(+9 files in other folders)
