cabal-version:      2.4
name:               PLP2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marcos Antônio
maintainer:         marcoscardoso.programmer@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable PLP2023
    main-is:          ./app/Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Utils.Gum
        Menu.MenuPrincipal
        Text.CSV
        Login.ValidaLogin

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base >=4.12,
        text >= 1.2 && < 1.3,
        csv >= 0.1 && < 0.2,
        bytestring >= 0.11 && < 0.12,
        filepath >= 1.4 && < 1.5
    hs-source-dirs:   ./
    default-language: Haskell2010
